# web-vuln-tool

./: README.md  pyproject.toml
mytool/: config.py  core.py  report.py
mytool/attacks/: payloads.py  payloads.yaml
mytool/plugins/: base.py  xss.py
tests/: test_xss.py  test_xss_baseline.py  test_xss_dom.py  test_xss_reflective.py  test_xss_stored.py
