[tool.poetry]
name = "web-vuln-tool"
version = "0.1.0"
description = "Community-oriented web vulnerability scanning tool"
authors = ["chlwlS135@naver.com <chlwls135@naver.com>"]
readme = "README.md"
license = "MIT"

packages = [
  { include = "mytool" }
]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = { version = ">=0.35.0,<0.36.0", extras = ["standard"] }
httpx = ">=0.28.1,<0.29.0"
typer = ">=0.16.0,<0.17.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = "^2.10.1"
aiohttp = "^3.12.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-httpserver = "^1.1.3"
pytest-asyncio = "^1.1.0"
anyio = "^4.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
